packages/libbird/lib/src/engine_bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings to libbird C++ engine
class LibbirdBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LibbirdBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LibbirdBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void init_ladybird() {
    return _init_ladybird();
  }

  late final _init_ladybirdPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('init_ladybird');
  late final _init_ladybird = _init_ladybirdPtr.asFunction<void Function()>();

  ffi.Pointer<ffi.Void> get_latest_pixel_buffer() {
    return _get_latest_pixel_buffer();
  }

  late final _get_latest_pixel_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
        'get_latest_pixel_buffer',
      );
  late final _get_latest_pixel_buffer = _get_latest_pixel_bufferPtr
      .asFunction<ffi.Pointer<ffi.Void> Function()>();

  void set_frame_callback(
    FrameCallback callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _set_frame_callback(callback, context);
  }

  late final _set_frame_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(FrameCallback, ffi.Pointer<ffi.Void>)
        >
      >('set_frame_callback');
  late final _set_frame_callback = _set_frame_callbackPtr
      .asFunction<void Function(FrameCallback, ffi.Pointer<ffi.Void>)>();

  void resize_window(int width, int height) {
    return _resize_window(width, height);
  }

  late final _resize_windowPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'resize_window',
      );
  late final _resize_window = _resize_windowPtr
      .asFunction<void Function(int, int)>();

  void navigate_to(ffi.Pointer<ffi.Char> url) {
    return _navigate_to(url);
  }

  late final _navigate_toPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'navigate_to',
      );
  late final _navigate_to = _navigate_toPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void set_zoom(double zoom) {
    return _set_zoom(zoom);
  }

  late final _set_zoomPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Double)>>('set_zoom');
  late final _set_zoom = _set_zoomPtr.asFunction<void Function(double)>();
}

typedef FrameCallback = ffi.Pointer<ffi.NativeFunction<FrameCallbackFunction>>;
typedef FrameCallbackFunction = ffi.Void Function(ffi.Pointer<ffi.Void>);
typedef DartFrameCallbackFunction = void Function(ffi.Pointer<ffi.Void>);
